# BeerBot

./: .gitignore
imageRecognitionModel/: main.py
ros2_code/: build_instructions.txt
ros2_code/architecture/: diagram.drawio
ros2_code/install/: local_setup.sh  setup.sh
ros2_code/install/custom_interfaces/include/custom_interfaces/msg/: servo_data.h  servo_data.hpp
ros2_code/install/custom_interfaces/include/custom_interfaces/msg/detail/: servo_data__builder.hpp  servo_data__functions.c  (+11 more)
ros2_code/install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh  package.xml
ros2_code/install/custom_interfaces/share/custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  custom_interfaces__rosidl_generator_cExport.cmake  rosidl_cmake-extras.cmake
ros2_code/install/custom_interfaces/share/custom_interfaces/msg/: ServoData.idl
ros2_code/install/template_code/share/template_code/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_code/install/template_code/share/template_code/cmake/: template_codeConfig.cmake
ros2_code/launch/: launch_test.py
ros2_code/log/: latest_build
ros2_code/src/custom_interfaces/: CMakeLists.txt
ros2_code/src/custom_interfaces/msg/: ServoData.msg  TargetLocation.msg
ros2_code/src/network_interface/: package.xml  setup.cfg  setup.py
ros2_code/src/network_interface/network_interface/: WebServer.py
ros2_code/src/template_code/: CMakeLists.txt
ros2_code/src/template_code/src/: Brain.cpp  Camera.cpp  ServoTemplate.cpp  StatusLed.cpp  TemplateServo.cpp
(+2 files in other folders)
